objects/JBCXM__SurveyAllowedAnswers__c.object
<CustomObject>
    <description>This is used to store allowed answers.</description>
    <fields>
        <fullName>JBCXM__AllowOtherLabel__c</fullName>
        <label>AllowOther Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AllowOtherPosition__c</fullName>
        <label>Allow Other Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below</fullName>
                </value>
                <value>
                    <fullName>Beside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__AllowOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__AnswerScore__c</fullName>
        <label>Answer Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClonedFrom__c</fullName>
        <description>Maintains Id of the answerId from where this answer is cloned</description>
        <label>ClonedFrom</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultAnswer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultText__c</fullName>
        <label>Default Text</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupAlignment__c</fullName>
        <label>Group Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal</fullName>
                </value>
                <value>
                    <fullName>Vertical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__GroupIcon__c</fullName>
        <label>Group Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupLabel__c</fullName>
        <label>GroupLabel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsTranslation__c</fullName>
        <formula>NOT(ISBLANK(JBCXM__TranslationFor__c))</formula>
        <label>Is translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Language Code</description>
        <label>Language</label>
        <referenceTo>JBCXM__GSLanguage__c</referenceTo>
        <relationshipLabel>Survey Answer Language</relationshipLabel>
        <relationshipName>AllowdAnswerLanguage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenAnswerSize__c</fullName>
        <description>This is used for text type answer to store the size</description>
        <label>OpenAnswerSize</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenCommentsColumnsSize__c</fullName>
        <description>This is used to store number of columns to be displayed while showing open comments</description>
        <label>OpenCommentsColumnsSize</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenCommentsRowSize__c</fullName>
        <description>This is used to store row size of  comments type question</description>
        <label>OpenCommentsRowSize</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyMaster__c</fullName>
        <label>Survey Master</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>Survey Allowed Answers</relationshipLabel>
        <relationshipName>SurveyAllowedAnswers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyQuestion__c</fullName>
        <label>Survey Question</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Allowed Answers</relationshipLabel>
        <relationshipName>SurveyAllowedAnswers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Answer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__TranslationFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>JBCXM__SurveyAllowedAnswers__c</referenceTo>
        <relationshipLabel>Parent</relationshipLabel>
        <relationshipName>TranslatedAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserResponseCount__c</fullName>
        <label>User Response Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Allowed Answers</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__Title__c</columns>
        <columns>JBCXM__SurveyMaster__c</columns>
        <columns>JBCXM__SurveyQuestion__c</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__IsActive__c</columns>
        <columns>JBCXM__AllowOther__c</columns>
        <columns>JBCXM__AllowOtherLabel__c</columns>
        <columns>JBCXM__GroupIcon__c</columns>
        <columns>JBCXM__GroupLabel__c</columns>
        <columns>JBCXM__UserResponseCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SuT-{0000}</displayFormat>
        <label>SurveyAllowedAnswers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Allowed Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>